Add support logic for negatives and zeroes

--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
       <h1>A page</h1>
       <hr>
         <div class="form-group">
-          <input type="text" id="target" placeholder="What number do you want to count to?"></button>
+          <label for="target">
+            What number do you want to count to?&nbsp;
+          </label>
+          <input type="text" id="target" placeholder=""></button>
         </div>
         <div class="form-group">
-          <input type="text" id="jump" placeholder="How big of a jump do you want?"></button>
+          <label for="jump">
+            How big of a jump do you want?&nbsp;
+          </label>
+          <input type="text" id="jump" placeholder=""></button>
         </div>
         <button class="btn btn-success" type="button" name="button">Submit</button>
         <div class="card" id="display">
