add elegance to errors

--- a/index.html
+++ b/index.html
@@ -10,21 +10,24 @@
   </head>
   <body>
     <div class="container">
-      <h1>A page</h1>
+      <h1>Jump Counter</h1>
+      <div class="alert alert-dark">
+        Enter a number to count to. Then enter a number to count by.  For instance, you could count to 20 by fives like this: 5, 10, 15, 20.
+      </div>
       <hr>
         <div class="form-group">
           <label for="target">
             What number do you want to count to?&nbsp;
           </label>
-          <input type="text" id="target" placeholder=""></button>
+          <input type="text" id="target" placeholder="Bigger Number"></button>
         </div>
         <div class="form-group">
           <label for="jump">
-            How big of a jump do you want?&nbsp;
+            What number do you want to count by?&nbsp;
           </label>
-          <input type="text" id="jump" placeholder=""></button>
+          <input type="text" id="jump" placeholder="Smaller Number"></button>
         </div>
-        <button class="btn btn-success" type="button" name="button">Submit</button>
+        <button class="btn btn-success" type="button" name="button">Gimme my numbers!</button>
         <div class="card" id="display">
           <div class="card-header">
             Your number sequence:
